<resources>
    <string name="app_name">ColorHub</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banner_com"></string>
    <string name="banner_commercial">ca-app-pub-8446606602742080/4407347050</string>
    <string name="banner_commercialww">ca-app-pub-8446606602742080~2930613852</string>
    <string name="antrikod_web">www.antrikod.com</string>
    <string name="software_team">SOFTWARE TEAM</string>
    <string name="graphic_team">GRAPHICS TEAM</string>
    <string name="contact_us">Contact Us</string>
    <string name="aboutus">We develops applications for Mobile platforms and works on different technologies. For more, visit our website.</string>
    <string name="new_rate_dialog_title">Rate this app</string>
    <string name="new_rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="new_rate_dialog_ok">Rate It Now</string>
    <string name="new_rate_dialog_later">Remind Me Later</string>
    <string name="new_rate_dialog_never">No, Thanks</string>
    <string-array name="HeaderColorName">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue Grey</item>
    </string-array>
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="FlatColorName">
        <item>Turquoise</item>
        <item>Greensea</item>
        <item>Emerland</item>
        <item>Nephritis</item>
        <item>Peterriver</item>
        <item>Belizehole</item>
        <item>Amethyst</item>
        <item>Wisteria</item>
        <item>Wetasphalt</item>
        <item>Midnightblue</item>
        <item>Sunfloser</item>
        <item>Orange</item>
        <item>Carrot</item>
        <item>Pumpkin</item>
        <item>Alizarin</item>
        <item>Pomegranate</item>
        <item>Clouds</item>
        <item>Silver</item>
        <item>Asbestos</item>
        <item>Concrete</item>
    </string-array>
    <string-array name="FlatColorCode">
        <item>#FF1abc9c</item>
        <item>#FF16a085</item>
        <item>#FF2ecc71</item>
        <item>#FF27ae60</item>
        <item>#FF3498db</item>
        <item>#FF2980b9</item>
        <item>#FF9b59b6</item>
        <item>#FF8e44ad</item>
        <item>#FF34495e</item>
        <item>#FF2c3e50</item>
        <item>#FFf1c40f</item>
        <item>#FFf39c12</item>
        <item>#FFe67e22</item>
        <item>#FFd35400</item>
        <item>#FFe74c3c</item>
        <item>#FFc0392b</item>
        <item>#FFecf0f1</item>
        <item>#FFbdc3c7</item>
        <item>#FF7f8c8d</item>
        <item>#FF95a5a6</item>
    </string-array>
    <string-array name="MetroColorName">
        <item>Lime</item>
        <item>Green</item>
        <item>Emerald</item>
        <item>Teal</item>
        <item>Cyan</item>
        <item>Cobalt</item>
        <item>Indigo</item>
        <item>Violet</item>
        <item>Pink</item>
        <item>Magenta</item>
        <item>Crimson</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Amber</item>
        <item>Yellow</item>
        <item>Brown</item>
        <item>Olive</item>
        <item>Steel</item>
        <item>Mauve</item>
        <item>Sienna</item>
    </string-array>
    <string-array name="MetroColorCode">
        <item>#FFa4c400</item>
        <item>#FF60a917</item>
        <item>#FF008a00</item>
        <item>#FF00aba9</item>
        <item>#FF1ba1e2</item>
        <item>#FF0050ef</item>
        <item>#FF6a00ff</item>
        <item>#FFaa00ff</item>
        <item>#FFf472d0</item>
        <item>#FFd80073</item>
        <item>#FFa20025</item>
        <item>#FFe51400</item>
        <item>#FFfa6800</item>
        <item>#FFf0a30a</item>
        <item>#FFe3c800</item>
        <item>#FF825a2c</item>
        <item>#FF6d8764</item>
        <item>#FF647687</item>
        <item>#FF76608a</item>
        <item>#FFa0522d</item>
    </string-array>
    <string-array name="SocialColorName">

        <item>Facebook</item>
        <item>Skype</item>
        <item>Twitter</item>
        <item>Wordpress</item>
        <item>Linkedin</item>
        <item>Vimeo</item>
        <item>Tumblr</item>
        <item>VK</item>
        <item>Yahoo</item>
        <item>Slideshare</item>
        <item>Instagram</item>
        <item>Google Plus</item>
        <item>Producthunt</item>
        <item>Slack</item>
        <item>Hackernews</item>
        <item>Dribbble</item>
        <item>Whatsapp</item>
        <item>Flickr</item>
        <item>Wechat</item>
        <item>Foursquare</item>
        <item>Medium</item>
        <item>Vine</item>
        <item>Behance</item>
        <item>Snapchat</item>
    </string-array>
    <string-array name="SocialColorCode">
        <item>#FF3b5999</item>
        <item>#FF00AFF0</item>
        <item>#FF55acee</item>
        <item>#FF21759b</item>
        <item>#FF0077B5</item>
        <item>#FF1ab7ea</item>
        <item>#FF34465d</item>
        <item>#FF4c75a3</item>
        <item>#FF410093</item>
        <item>#FF0077b5</item>
        <item>#FF3f729b</item>
        <item>#FFdd4b39</item>
        <item>#FFda552f</item>
        <item>#FF3aaf85</item>
        <item>#FFff6600</item>
        <item>#FFea4c89</item>
        <item>#FF25D366</item>
        <item>#FFff0084</item>
        <item>#FF09b83e</item>
        <item>#FFf94877</item>
        <item>#FF02b875</item>
        <item>#FF00b489</item>
        <item>#FF131418</item>
        <item>#FFFFFC00</item>
    </string-array>
    <string-array name="MaterialColorNames">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue Grey</item>
    </string-array>
    <string-array name="MaterialColorCodeName">
        <item>RED</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>A100</item>
        <item>A200</item>
        <item>A400</item>
        <item>A700</item>
    </string-array>
    <string-array name="MaterialColorCodeRed">
        <item>#FFF44336</item>
        <item>#FFFFebee</item>
        <item>#ffffcdd2</item>
        <item>#ffef9a9a</item>
        <item>#ffe57373</item>
        <item>#ffef5350</item>
        <item>#fff44336</item>
        <item>#ffe53935</item>
        <item>#ffd32f2f</item>
        <item>#ffc62828</item>
        <item>#ffb71c1c</item>
        <item>#ffff8a80</item>
        <item>#ffff5252</item>
        <item>#ffff1744</item>
        <item>#ffd50000</item>

    </string-array>
    <string-array name="MaterialColorCodePink">
        <item>#FFE91E63</item>
        <item>#FFFCE4EC</item>
        <item>#FFF8BBD0</item>
        <item>#FFF48FB1</item>
        <item>#FFF06292</item>
        <item>#FFEC407A</item>
        <item>#FFE91E63</item>
        <item>#FFD81B60</item>
        <item>#FFC2185B</item>
        <item>#FFAD1457</item>
        <item>#FF880E4F</item>
        <item>#FFFF80AB</item>
        <item>#FFFF4081</item>
        <item>#FFF50057</item>
        <item>#FFC51162</item>
    </string-array>
    <string-array name="MaterialColorCodePurple">
        <item>#FF9C27B0</item>
        <item>#FFF3E5F5</item>
        <item>#FFE1BEE7</item>
        <item>#FFCE93D8</item>
        <item>#FFBA68C8</item>
        <item>#FFAB47BC</item>
        <item>#FF9C27B0</item>
        <item>#FF8E24AA</item>
        <item>#FF7B1FA2</item>
        <item>#FF6A1B9A</item>
        <item>#FF4A148C</item>
        <item>#FFEA80FC</item>
        <item>#FFE040FB</item>
        <item>#FFD500F9</item>
        <item>#FFAA00FF</item>
    </string-array>
    <string-array name="MaterialColorCodeDeepPurple">
        <item>#FF673AB7</item>
        <item>#FFEDE7F6</item>
        <item>#FFD1C4E9</item>
        <item>#FFB39DDB</item>
        <item>#FF9575CD</item>
        <item>#FF7E57C2</item>
        <item>#FF673AB7</item>
        <item>#FF5E35B1</item>
        <item>#FF512DA8</item>
        <item>#FF4527A0</item>
        <item>#FF311B92</item>
        <item>#FFB388FF</item>
        <item>#FF7C4DFF</item>
        <item>#FF651FFF</item>
        <item>#FF6200EA</item>
    </string-array>
    <string-array name="MaterialColorCodeIndigo">
        <item>#FF3F51B5</item>
        <item>#FFE8EAF6</item>
        <item>#FFC5CAE9</item>
        <item>#FF9FA8DA</item>
        <item>#FF7986CB</item>
        <item>#FF5C6BC0</item>
        <item>#FF3F51B5</item>
        <item>#FF3949AB</item>
        <item>#FF303F9F</item>
        <item>#FF283593</item>
        <item>#FF1A237E</item>
        <item>#FF8C9EFF</item>
        <item>#FF536DFE</item>
        <item>#FF3D5AFE</item>
        <item>#FF304FFE</item>
    </string-array>
    <string-array name="MaterialColorCodeBlue">
        <item>#FF2196F3</item>
        <item>#FFE3F2FD</item>
        <item>#FFBBDEFB</item>
        <item>#FF90CAF9</item>
        <item>#FF64B5F6</item>
        <item>#FF42A5F5</item>
        <item>#FF2196F3</item>
        <item>#FF1E88E5</item>
        <item>#FF1976D2</item>
        <item>#FF1565C0</item>
        <item>#FF0D47A1</item>
        <item>#FF82B1FF</item>
        <item>#FF448AFF</item>
        <item>#FF2979FF</item>
        <item>#FF2962FF</item>
    </string-array>
    <string-array name="MaterialColorCodeLightBlue">
        <item>#FF03A9F4</item>
        <item>#FFE1F5FE</item>
        <item>#FFB3E5FC</item>
        <item>#FF81D4FA</item>
        <item>#FF4FC3F7</item>
        <item>#FF29B6F6</item>
        <item>#FF03A9F4</item>
        <item>#FF039BE5</item>
        <item>#FF0288D1</item>
        <item>#FF0277BD</item>
        <item>#FF01579B</item>
        <item>#FF80D8FF</item>
        <item>#FF40C4FF</item>
        <item>#FF00B0FF</item>
        <item>#FF0091EA</item>
    </string-array>
    <string name="palette_name">Palette Name</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_about_us">About Us</string>
    <string name="action_share_this_app">Share This App</string>
    <string name="action_rate_this_app">Rate This App</string>
    <string name="action_more_app">More</string>
</resources>